--- a/crates/multi-agent-system-runtime/Cargo.toml
+++ b/crates/multi-agent-system-runtime/Cargo.toml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [package]
-name = "multi-agent-system-core"
+name = "multi-agent-system-runtime"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -27,11 +27,10 @@ publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 
-[dependencies]
-eframe.workspace = true
-
 [features]
 default = []
+
+[dependencies]
 
 [lints]
 workspace = true
