--- a/multi-agent-system/Cargo.toml
+++ b/multi-agent-system/Cargo.toml
@@ -32,6 +32,7 @@ default = []
 
 [dependencies]
 multi-agent-system-core.workspace = true
+multi-agent-system-gui.workspace = true
 
 [lints]
 workspace = true
