--- a/crates/multi-agent-system-sync/Cargo.toml
+++ b/crates/multi-agent-system-sync/Cargo.toml
@@ -31,6 +31,10 @@ repository.workspace = true
 default = []
 
 [dependencies]
+# Workspace Crates
+multi-agent-system-core.workspace = true
+# Sync
+crossbeam-channel.workspace = true
 arc-swap.workspace = true
 
 [lints]
