add workshop empty todo projects

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@
 
 [workspace]
 resolver = "2"
-members = [# Workspace Crates
+members = [
+    # Workspace Crates
     "crates/multi-agent-system-core",
     "crates/multi-agent-system-sync",
     "crates/multi-agent-system-runtime",
@@ -23,7 +24,8 @@ members = [# Workspace Crates
     "multi-agent-system",
     # Internal
     "benches",
-    "examples"]
+    "examples"
+]
 
 [workspace.package]
 version = "0.1.0"
