--- a/crates/multi-agent-core/Cargo.toml
+++ b/crates/multi-agent-core/Cargo.toml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [package]
-name = "multi-agent-system"
+name = "multi-agent-core"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -27,12 +27,11 @@ publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 
+[dependencies]
+eframe.workspace = true
+
 [features]
 default = []
-
-[dependencies]
-multi-agent-system-core.workspace = true
-multi-agent-system-gui.workspace = true
 
 [lints]
 workspace = true
