--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -28,7 +28,7 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
-multi-agent-system = { path = "../multi-agent-system", features = ["default"] }
+multi-agent = { path = "../multi-agent", features = ["default"] }
 
 [lints]
 workspace = true
