--- a/multi-agent/Cargo.toml
+++ b/multi-agent/Cargo.toml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [package]
-name = "multi-agent-system-core"
+name = "multi-agent"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -27,11 +27,13 @@ publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 
-[dependencies]
-eframe.workspace = true
-
 [features]
 default = []
+
+[dependencies]
+# Workspace Internal Crates
+multi-agent-core.workspace = true
+multi-agent-gui.workspace = true
 
 [lints]
 workspace = true
