Refactor core traits and add runtime manager

--- a/crates/multi-agent-core/Cargo.toml
+++ b/crates/multi-agent-core/Cargo.toml
@@ -28,6 +28,7 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
+# Graphical User Interface
 eframe.workspace = true
 
 [features]
