Fix runtime sharing trait

--- a/crates/multi-agent-gui/Cargo.toml
+++ b/crates/multi-agent-gui/Cargo.toml
@@ -33,6 +33,7 @@ default = []
 [dependencies]
 # Workspace Internal Crates
 multi-agent-core.workspace = true
+multi-agent-sync.workspace = true
 # Graphical User Interface
 eframe.workspace = true
 
