--- a/crates/multi-agent-core/Cargo.toml
+++ b/crates/multi-agent-core/Cargo.toml
@@ -28,6 +28,9 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
+# Sync
+crossbeam-channel.workspace = true
+arc-swap.workspace = true
 # Graphical User Interface
 eframe.workspace = true
 
