Setup workshop packages and README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,13 @@ thiserror = { version = "2.0.18", features = [] }
 unsafe_code = "forbid"
 
 [workspace.lints.clippy]
-unsafe_code = "forbid"
+all = { level = "deny", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+cargo = { level = "warn", priority = -1 }
+unwrap_used = "deny"
+expect_used = "deny"
+panic = "deny"
 
 [profile.dev]
 opt-level = 1
@@ -68,5 +74,8 @@ opt-level = 1
 opt-level = 3
 
 [profile.release]
+opt-level = 3
+lto = "fat"
 codegen-units = 1
-lto = "thin"
+panic = "abort"
+strip = "symbols"
