Fix multiple versions for dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ arc-swap = { version = "1.8.0", features = [] }
 # Graphical User Interface
 eframe = { version = "0.33.3", features = ["default"] }
 # Error Handling
-thiserror = { version = "2.0.18", features = [] }
+thiserror = { version = "*", features = [] }
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
