--- a/workshop/Cargo.toml
+++ b/workshop/Cargo.toml
@@ -16,6 +16,7 @@ all = { level = "deny", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
 nursery = { level = "warn", priority = -1 }
 cargo = { level = "warn", priority = -1 }
+multiple_crate_versions = "allow"
 unwrap_used = "deny"
 expect_used = "deny"
 panic = "deny"
