--- a/workshop/fluid/Cargo.toml
+++ b/workshop/fluid/Cargo.toml
@@ -4,6 +4,9 @@ edition = "2024"
 
 [dependencies]
 multi-agent.workspace = true
+# Graphical User Interface Dependencies
+eframe.workspace = true
+egui.workspace = true
 
 [lints]
 workspace = true
