--- a/workshop/game-of-life/Cargo.toml
+++ b/workshop/game-of-life/Cargo.toml
@@ -4,6 +4,8 @@ edition = "2024"
 
 [dependencies]
 multi-agent.workspace = true
+# Parallelization
+rayon = { version = "1.11.0", features = [] }
 # Graphical User Interface Dependencies
 eframe.workspace = true
 egui.workspace = true
